Alterando o código para permitir puxar os tweets

--- a/Projeto2_layout.ipynb
+++ b/Projeto2_layout.ipynb
@@ -93,7 +93,7 @@
     "#Coloque aqui o identificador da conta no twitter: @pedrohmenezeso\n",
     "\n",
     "#leitura do arquivo no formato JSON\n",
-    "with open('auth.pass.template') as fp:    \n",
+    "with open('auth.pass') as fp:    \n",
     "    data = json.load(fp)\n",
     "\n",
     "#Configurando a biblioteca. Não modificar\n",
