Coloquei a descrição sobre cada tipo de relevância

--- a/Projeto2_layoutrt.ipynb
+++ b/Projeto2_layoutrt.ipynb
@@ -13,7 +13,9 @@
    "source": [
     "Nome: Pedro Henrique Menezes de Oliveira\n",
     "\n",
-    "Nome: _____"
+    "Nome: Lucio Hallage\n",
+    "\n",
+    "Nome: Vitor Miada"
    ]
   },
   {
@@ -252,6 +254,17 @@
     "### Classificando as mensagens na coragem\n",
     "\n",
     "Esta etapa é manual. Faça a mesma pelo Excel."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Irrelevante - 0:** Tweets que não estão relacionados diretamente com a Netflix. Ex.: \"*malta digam ai séries para ver na netflix*\"\n",
+    "\n",
+    "**Relevante - 1:** Tweets que estão relacionados diretamente com a Netflix e que dizem algo a respeito que expresse opinião. Ex.: \"*50 tons mais escuros vai ta na netflix nen adoro😅*\"\n",
+    "\n",
+    "**Neutros - 2:** Tweets que estão relacionados diretamente com a Netflix porém não expressam opinião. Ex.: \"*milhões de séries disponíveis na netflix,mas minha preferência é sempre #glee!!!*\""
    ]
   },
   {
