Colocando para instalar as bibliotecas automaticamente

--- a/Dashboard.ipynb
+++ b/Dashboard.ipynb
@@ -12,6 +12,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class_relev={}\n",
+    "for frase1 in data_clean:  \n",
+    "    frase = frase1.split()\n",
+    "    log_probr = 0\n",
+    "    for p in frase:\n",
+    "        if p in relevantes_relativos:\n",
+    "            log_probr += np.log10(relevantes_relativos[p])\n",
+    "    log_probi = 0\n",
+    "    for p in frase:\n",
+    "        if p in irrelevantes_relativos:\n",
+    "            log_probi += np.log10(irrelevantes_relativos[p])\n",
+    "    log_probn = 0\n",
+    "    for p in frase:\n",
+    "        if p in neutros_relativos:\n",
+    "            log_probn += np.log10(neutros_relativos[p])\n",
+    "    log_probr*=-1\n",
+    "    log_probi*=-1\n",
+    "    log_probn*=-1\n",
+    "    if log_probr>log_probi and log_probr>log_probn:       \n",
+    "        class_relev[frase1]=1\n",
+    "    elif log_probi>log_probr and log_probi>log_probn:\n",
+    "        class_relev[frase1]=0\n",
+    "    else:\n",
+    "        class_relev[frase1]=2\n",
+    "print(class_relev)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
