--- a/Projeto2_layoutrt.ipynb
+++ b/Projeto2_layoutrt.ipynb
@@ -796,7 +796,9 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
